--- a/Deploy.yml
+++ b/Deploy.yml
@@ -46,6 +46,10 @@
   - name: Set up Wordpress
     hosts: localhost
     tasks:
+      - name: Create Directory
+        file:
+          path: /srv/www/htdocs/wordpress
+          state: directory
 # May not need if Downloading via unarchive works
 #      - name: Download Wordpress
 #        get_url:
