Fix bug where it creates multiple wordpress directorires

--- a/Deploy.yml
+++ b/Deploy.yml
@@ -48,7 +48,7 @@
     tasks:
       - name: Create Directory
         file:
-          path: /srv/www/htdocs/wordpress
+          path: /srv/www/htdocs/
           state: directory
 # May not need if Downloading via unarchive works
 #      - name: Download Wordpress
