re-adding Zypper Module

--- a/Test.yml
+++ b/Test.yml
@@ -3,9 +3,25 @@
   - name: Download Dependancies
     hosts: localhost
     tasks:
-      - name: Install
-        shell: zypper --non-interactive install php-gd  php-pdo  php-mysql  php-mbstring  php-simplexml  php-curl apache2-mod_php7 mariadb mariadb-tools
-  
+#      - name: Install
+#        shell: zypper --non-interactive install php-gd  php-pdo  php-mysql  php-mbstring  php-simplexml  php-curl apache2-mod_php7 mariadb mariadb-tools
+      - name: PHP
+        zypper:
+          name:
+            - php-gd
+            - php-pdo
+            - php-mysql
+            - php-mbstring
+            - php-simplexml
+            - php-curl
+            - apache2-mod_php7
+          state: present
+      - name: MariaDB
+        zypper:
+          name:
+            - mariadb
+            - mariadb-tools
+
   - name: Start Services
     hosts: localhost
     tasks:
