--- a/Deploy.yml
+++ b/Deploy.yml
@@ -4,21 +4,7 @@
     hosts: localhost
     tasks:
       - name: PHP
-        zypper:
-          name:
-            - php-gd
-            - php-pdo
-            - php-mysql
-            - php-mbstring
-            - php-simplexml
-            - php-curl
-            - apache2-mod_php7
-          state: present
-      - name: MariaDB
-        zypper:
-          name:
-            - mariadb
-            - mariadb-tools
+        shell: zypper --non-interactive install php-gd  php-pdo  php-mysql  php-mbstring  php-simplexml  php-curl apache2-mod_php7 mariadb mariadb-tools
   
   - name: Start Services
     hosts: localhost
